k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fedgnn-prod
  labels:
    name: fedgnn-prod
